# xtrkcad

./: .hgignore  CMakeLists.txt  xtrkcad-config.h.in
app/: CMakeLists.txt
app/cornu/: CMakeLists.txt  bezctx.c  bezctx.h  bezctx_intf.h  bezctx_xtrkcad.c  bezctx_xtrkcad.h  spiro.c  spiro.h  spiroentrypoints.c  spiroentrypoints.h
app/doc/: CMakeLists.txt  addm.but  appendix.but  changem.but  drawm.but  editm.but  filem.but  helpm.but  hhc.cmake.in  hotbar.but  intro.but.in  linconf.but  macrom.but  managem.but  navigation.but  optionm.but  osxconf.but  statusbar.but  upgrade.but  view_winm.but  warranty.but  xtrkcad_osx.css
app/dynstring/: CMakeLists.txt  CmakeLists.txt  dynstring.c  dynstring.h
app/dynstring/unittest/: CMakeLists.txt  DynStringTest.c
app/help/: CMakeLists.txt  genhelp.c  genhelp.in  genhelp.json  genmessages.c  messages.in  xtrkcad.info  xtrkcad.tip
app/i18n/: CMakeLists.txt  cy_GB.po  de_DE.po  fi.po  fr_FR.po  pt_BR.po  ru.po  stripmsg.c
app/lib/: CHANGELOG.md  CMakeLists.txt  Readme.md  Readme.txt  astylerc  xdg-open  xtrkcad.desktop  xtrkcad.xtq
app/lib/demos/: dmadjend.xtr  dmbench.xtr  dmcancel.xtr  dmcircle.xtr  dmconn1.xtr  dmconn2.xtr  dmcrvtrk.xtr  dmctlpnl.xtr  dmdelund.xtr  dmdialog.xtr  dmdimlin.xtr  dmease.xtr  dmelev.xtr  dmexcept.xtr  dmextend.xtr  dmflip.xtr  dmgroup.xtr  dmhelix.xtr  dmhndld.xtr  dmintro.xtr  dmjcir.xtr  dmjnabut.xtr  dmjncs.xtr  dmjnmove.xtr  dmjnss.xtr  dmjntt.xtr  dmlines.xtr  dmlines2.xtr  dmmouse.xtr  dmmovabt.xtr  dmnotes.xtr  dmparall.xtr  dmplymod.xtr  dmprof.xtr  dmrescal.xtr  dmrotate.xtr  dmruler.xtr  dmselect.xtr  dmsplit.xtr  dmstrtrk.xtr  (+6 more)
app/lib/examples/: DVRR v3.0 E Stroudsburg - Pt Jervis.xtc  pmi.xtc  psr.xtc
app/lib/params/: Any-AtlasControllers.xtp  Any-CTC_panel.xtp  AtlasTrueTrk.xtp  BachmannEZ-HO.xtp  BachmannEZ-N.xtp  CMakeLists.txt  F-NMRA-RP12-21.xtp  FastTrack-HO.xtp  FastTrack_n.xtp  G-MicroEngineeringTrack.xtp  G-NMRA-RP12-23.xtp  G-NQD-AMAX Plastic.xtp  G-Peco G45 Track.xtp  G-aristo.xtp  Gn15-nmra.xtp  HO-CentralValley Bridges.xtp  HO-DapolHOOO.xtp  HO-EndoRailwayTrackSystem.xtp  HO-Frateschi.xtp  HO-HornbyHO.xtp  HO-LifeLike-Power-Loc.xtp  HO-Marklin C-Track.xtp  HO-Marklin K-track.xtp  HO-Marklin M-Track.xtp  HO-Mehano.xtp  HO-MetcalfeHOOO.xtp  HO-MicroEngineering-Bridges.xtp  HO-MicroEngineering.xtp  HO-Peco-Code100Setrack.xtp  HO-Peco-Code100Streamline.xtp  HO-Peco-Code75Finescale.xtp  HO-Peco70USA.xtp  HO-RatioHOOO.xtp  HO-Roco HO Code 83.xtp  HO-Slot-Car-AFX-Track.xtp  HO-Slot-Cars.xtp  HO-WalthCornerstone 1.xtp  HO-Walthers Cornerstone Engineered Bridge System.xtp  HO-Weinert-Code75.xtp  HO-WillsHOOO.xtp  (+158 more)
app/lib/signals/: BR-System.xtcs  BR-System.xtps  CMakeLists.txt  Default-System.xtps
app/lib/signals/HeadTypes/: BR-Banner.xtps  BR-ColourLights.xtcs  BR-ColourLights.xtps  BR-Feathers.xtcs  BR-Feathers.xtps  BR-Ground Signals.xtcs  BR-Ground-Signals.xtcs  BR-Ground-Signals.xtps  BR-MR-Semaphore.xtcs  BR-MR-Semaphore.xtps  BR-Position-and-Shunt.xtcs  BR-Position-and-Shunt.xtps  BR-Theatre.xtcs  BR-Theatre.xtps  BR-WR-Semaphore.xtcs  BR-WR-Semaphore.xtps  Base.xtcs  Base.xtps  CMakeLists.txt  Default-Heads.xtps  RenamedBR-Ground-Signals.xtcs
app/lib/signals/Posts/: BR-Posts.xtps  CMakeLists.txt  Default-Posts.xtps
app/lib/signals/Signals/: BR-Signals.xtps  CMakeLists.txt  Default-Signals.xtps  Test Signals.xtp
app/tools/: CMakeLists.txt  HACKING  listxtp.c
app/tools/halibut/: bk_html.c  halibut.h  input.c  paper.h
app/wlib/: CMakeLists.txt
app/wlib/gtk3lib/: CMakeLists.txt  bitmap.c  boxes.c  browserhelp.c  builder.c  button.c  color.c  control.c  droplist.c  dynarr.h  filesel.c  font.c  gtkdraw-cairo.c  gtkint.h  lines.c  list.c  menu.c  message.c  notice.c  png.c  print.c  single.c  splash.c  statusbar.c  text.c  timer.c  treeview.c  util.c  window.c  wpref.c
app/wlib/gtk3lib/glade/: Addelev.glade  Basic Window.glade  CMakeLists.txt  Carinv.glade  Carpart.glade  Color.glade  Command Options.glade  Crossover Designer.glade  DescribeWindow.glade  Dialog Window.glade  Display Options.glade  Easement.glade  Elevation.glade  Layer.glade  Layers.glade  Layout Options.glade  MainWindow.glade  Manage Layout Control Elements.glade  Manage Parts.glade  New Prototype.glade  Note.glade  Parameter Files.glade  Preferences.glade  Price List.glade  Print.glade  Snap Grid.glade  Sticky Commands.glade  Sticky.glade  Train Control.glade  Train.glade  TurnoutNew.glade  about.glade  addelev.glade  aspectEdit.glade  block.glade  blockedit.glade  carinv.glade  checkpoint.glade  cmdopt.glade  contmgm.glade  (+53 more)
app/wlib/gtk3lib/icons/ai/: Easement-Broad.ai  Easement-Cornu.ai  Easement-None.ai  Easement-Normal.ai  Easement-Sharp.ai  Info.ai  benchwork.ai  bezier-line.ai  box.ai  (+59 more)
app/wlib/gtk3lib/wrapbox/: CMakeLists.txt  catalog.xml  eggwrapbox-enums.h  eggwrapbox.c  testwrapbox.c
app/wlib/gtklib/: CMakeLists.txt  bitmap.c  boxes.c  browserhelp.c  button.c  color.c  control.c  droplist.c  filesel.c  font.c  gtkdraw-cairo.c  gtkhelp.c  gtkint.h  gtkmisc.c  gtktext.c  help.c  ixhelp.c  lines.c  list.c  liststore.c  main.c  menu.c  message.c  misc.c  notice.c  opendocument.c  osxhelp.c  pixbuf.c  pixbuf.c.orig  pixmap.c  png.c  print.c  single.c  splash.c  statusbar.c  text.c  timer.c  tooltip.c  treeview.c  util.c  (+2 more)
app/wlib/include/: mswlib.h  wcolors.h  wlib.h
app/wlib/mswlib/: CMakeLists.txt  backgnd.c  dynarr.h  mswbitmap.c  mswbutt.c  mswchoic.c  mswcolor.c  mswdraw.c  mswedit.c  mswint.h  mswlist.c  mswmenu.c  mswmisc.c  mswmsg.c  mswpref.c  mswprint.c  mswsplash.c  mswstatus.c  mswtext.c  simple-gettext.c  utf8conv.c
app/wlib/mswlib/unittest/: CMakeLists.txt  utf8test.c
distribution/osx/: CMakeLists.txt
distribution/osx/bundle/: Info.plist.in
distribution/osx/gtk-bundle/: CMakeLists.txt  gtk-bundle.README  info-xtrkcad.plist  info-xtrkcad.plist.in  toc.js  xtrkcad-bundler.sh  xtrkcad-bundler.sh.orig  xtrkcad-launcher.sh  xtrkcad-logo.icns  xtrkcad.bundle  xtrkcad.bundle alias
distribution/osx/gtk-bundle/XTrackCAD-help/: CMakeLists.txt  info-xtrkcad-help.plist.in
(+22 files in other folders)
