CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Info-xtrkcad.plist.in ${CMAKE_CURRENT_BINARY_DIR}/info-xtrkcad.plist @ONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/xtrkcad-template.dmg.zip ${CMAKE_CURRENT_BINARY_DIR}/xtrkcad-template-dmg.zip COPYONLY)

FILE(MAKE_DIRECTORY share)
FILE(MAKE_DIRECTORY bin)

INSTALL (
FILES ${CMAKE_CURRENT_BINARY_DIR}/info-xtrkcad.plist 
DESTINATION ${XTRKCAD_SHARE_INSTALL_DIR}/XTrackCAD.help
)
INSTALL (
FILES ${CMAKE_CURRENT_SOURCE_DIR}/toc.js 
DESTINATION ${XTRKCAD_SHARE_INSTALL_DIR}/XTrackCAD.help/Contents/Resources/en.lproj/scrpt
)

ADD_SUBDIRECTORY(XTrackCAD-help)



