
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Info-xtrkcad-help.plist.in ${CMAKE_CURRENT_BINARY_DIR}/Info.plist @ONLY)

FILE(MAKE_DIRECTORY share)

INSTALL (
    FILES ${CMAKE_CURRENT_BINARY_DIR}/Info.plist
    DESTINATION ${XTRKCAD_SHARE_INSTALL_DIR}/XTrackCAD.help/Contents
)

ADD_SUBDIRECTORY(Contents)



