
MAKE_DIRECTORY (${CMAKE_INSTALL_PREFIX}/${XTRKCAD_SHARE_INSTALL_DIR}/XTrackCAD.help/shrd)

INSTALL (
    FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon_16x16.png
	DESTINATION ${CMAKE_INSTALL_PREFIX}/${XTRKCAD_SHARE_INSTALL_DIR}/XTrackCAD.help/Contents/Resources
	)
# FILE(COPY ${CMAKE_INSTALL_PREFIX}/${XTRKCAD_SHARE_INSTALL_DIR} DESTINATION shrd )

ADD_SUBDIRECTORY(en.lproj)



